GCP-PROJECT/kubernetes-files/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      name: my-app
  template:
    metadata:
      labels:
        name: my-app
    spec:
      containers:
      - name: my-app
        image: gcr.io/my-project-377103/gcp-python:latest
        ports:
        - containerPort: 80
~
