GCP-PROJECT/kubernetes-files/deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: gcr.io/my-project-377103/redis-gcr:latest
        ports:
        - containerPort: 6379
~                                                                                                                                                      
~
